--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PM Career Transition</title>
+    <script>
+      (function() {
+        try {
+          var settings = JSON.parse(localStorage.getItem('pm-tracker-settings'));
+          if (settings && settings.darkMode) {
+            document.documentElement.classList.add('dark');
+          }
+        } catch (e) {}
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
